src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedLargeIcon/InvalidUnexpectedLargeIcon.php
<?php

namespace Invalid\UnexpectedLargeIcon;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidUnexpectedLargeIcon extends PluginBundle
{
}